Fix Code Rendering, Ui Fixes
After not having my computer for awhile, these are some small changes that had been annoying me without access to the ability to fix anything.

Fixes the issue of duplicate render code run code buttons.

Fix drags on the node panel affecting the fractal canvas pan.

--- a/index.html
+++ b/index.html
@@ -493,6 +493,12 @@
                                     <label for="ref-tag">Reference Tag</label>
                                 </td>
                             </tr>
+                            <!-- <tr>
+                                <td>
+                                    <label for="randomnessSlider">Randomize: </label>
+                                    <input type="range" id="randomnessSlider" min="0" max="0.01" step="0.0001" value="0">
+                                </td>
+                            </tr> -->
                         </table>
                     </div>
                 </div>
