Fix Code rendering, Ui Fixes

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-- Pyodide -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/pyodide/v0.23.0/full/pyodide.js"></script>
 
-  <script type="module" crossorigin src="./assets/index.cd38239e.js"></script>
+  <script type="module" crossorigin src="./assets/index.673308c0.js"></script>
   <link rel="stylesheet" href="./assets/index.76d7a8fb.css">
 </head>
 
@@ -490,6 +490,12 @@
                                     <label for="ref-tag">Reference Tag</label>
                                 </td>
                             </tr>
+                            <!-- <tr>
+                                <td>
+                                    <label for="randomnessSlider">Randomize: </label>
+                                    <input type="range" id="randomnessSlider" min="0" max="0.01" step="0.0001" value="0">
+                                </td>
+                            </tr> -->
                         </table>
                     </div>
                 </div>
