Adjust Autosave Pull Request
Adjustments, Ui enhancements, and fixes to the autosave functionality.

fixed issue where the selected and currently loaded saves were mismatched. Did this by adding a save and load button to each save item in the saved networks container.

--- a/index.html
+++ b/index.html
@@ -774,22 +774,17 @@
 
                 <div id="tab6" class="tabcontent">
                     <div class="submenu">
-                        <div title="Autosave enabled">
-                            <input type="checkbox" id="autosave-enabled" name="autosave-enabled">
-                            <label for="autosave-enabled">Autosave enabled</label>
-                        </div>
 
                         <div id="saved-networks-container" class="scrollable-list"></div>
 
-                        <input id="save-or-load" type="text" placeholder="save data..." style="width: 257px;" />
+                       
                         <div class="top-section">
                             <div class="buttons-left">
-                                <a id="save-button">Save</a>
-                                <a id="load-button">Load</a>
-                                <div id="load-sure" style="display:none">
-                                    <a id="load-unsure-button">no</a>
-                                    <a id="load-sure-button">yes</a>
+                                <div title="Autosave enabled">
+                                    <input type="checkbox" id="autosave-enabled" name="autosave-enabled">
+                                    <label for="autosave-enabled">Autosave</label>
                                 </div>
+                                <a id="new-save-button">Save As...</a>
                                 <a id="clear-button">Clear</a>
                                 <div id="clear-sure" style="display:none">
                                     <a id="clear-unsure-button">no</a>
